--- a/base-1.css
+++ b/base-1.css
@@ -6,11 +6,13 @@
 h1 {
     font-family: serif;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 60px;
+    text-align: center;
     line-height: 1.3;
     letter-spacing: -1px;
     margin-top: 20px;
     margin-bottom: 32px;
+    color: black
  }
  
  h2 {
@@ -36,9 +38,9 @@ h1 {
 p {
     font-family: sans-serif;
     font-weight: normal;
-    font-size: 16px;
-    line-height: 1.6;
-    margin-bottom: 12px;
+    font-size: 14px;
+    line-height: 1.5;
+    margin-bottom: 24px;
  }
 
  /* ==== PAGE WIDTH ==== */
