--- a/base-1.css
+++ b/base-1.css
@@ -18,19 +18,21 @@ h1 {
  h2 {
     font-family: serif;
     font-weight: bold;
-    font-size: 32px;
+    font-size: 40px;
+    text-align: left;
     line-height: 1.3;
-    margin-top: 40px;
-    margin-bottom: 12px;
+    margin-top: 20px;
+    margin-bottom: 32px;
  }
  
  h3 {
     font-family: serif;
     font-weight: bold;
-    font-size: 28px;
+    font-size: 20px;
+    text-align: left;
     line-height: 1.3;
-    margin-top: 32px;
-    margin-bottom: 6px;
+    margin-top: 20px;
+    margin-bottom: 32px;
  }
 
  /* ==== PARAGRAPHS ==== */
@@ -38,14 +40,15 @@ h1 {
 p {
     font-family: sans-serif;
     font-weight: normal;
-    font-size: 14px;
-    line-height: 1.5;
-    margin-bottom: 24px;
+    font-size: 15px;
+    line-height: 1.3;
+    margin-bottom: 20px;
  }
 
  /* ==== PAGE WIDTH ==== */
 
 body {
-    padding-left: 20%;
-    padding-right: 20%
+    padding-left: 10%;
+    padding-right: 10%
  }
+
