--- a/base-1.css
+++ b/base-1.css
@@ -6,8 +6,8 @@
 h1 {
     font-family: serif;
     font-weight: bold;
-    font-size: 60px;
-    text-align: center;
+    font-size: 40px;
+    text-align: left;
     line-height: 1.3;
     letter-spacing: -1px;
     margin-top: 20px;
@@ -18,7 +18,7 @@ h1 {
  h2 {
     font-family: serif;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 28px;
     text-align: left;
     line-height: 1.3;
     margin-top: 20px;
