--- a/base-1.css
+++ b/base-1.css
@@ -38,7 +38,7 @@ h1 {
  /* ==== PARAGRAPHS ==== */
 
 p {
-    font-family: sans-serif;
+    font-family: serif;
     font-weight: normal;
     font-size: 15px;
     line-height: 1.3;
@@ -48,7 +48,7 @@ p {
  /* ==== PAGE WIDTH ==== */
 
 body {
-    padding-left: 10%;
-    padding-right: 10%
+    padding-left: 20%;
+    padding-right: 20%
  }
 
