--- a/base-3.css
+++ b/base-3.css
@@ -1,6 +1,10 @@
 /* ==== BROWSER RESETS  ==== */
 * { padding: 0; margin: 0; border: 0; font-weight: normal; font-size: 16px }
 
+body, html { height: 100% } 
+
+body { max-width: 1600px; margin: 0 auto }
+
 /* ==== PAGE WIDTH ==== */
 
 /* Mobiles */
@@ -24,7 +28,7 @@
 h1 {
     font-family: serif;
     font-weight: bold;
-    font-size: 40px;
+    font-size: calc(42px + (64 - 42) * ((100vw - 320px)/(1600 - 320)));
     letter-spacing: -1px;
 }
 
@@ -35,7 +39,6 @@ h1 {
        line-height: 1.3;
        margin-top: 12%;
        margin-bottom: 6%;
-       color: red;
    }
 }
 
@@ -45,14 +48,13 @@ h1 {
        line-height: 1.3;
        margin-top: 12%;
        margin-bottom: 10%;
-       color: green;
    }
 }
 
 h2 {
     font-family: serif;
     font-weight: bold;
-    font-size: 32px;
+    font-size: calc(32px + (48 - 32) * ((100vw - 320px)/(1600 - 320)));
 }
  
  
@@ -77,7 +79,7 @@ h2 {
 h3 {
     font-family: serif;
     font-weight: bold;
-    font-size: 28px;
+    font-size: calc(22px + (28 - 22) * ((100vw - 320px)/(1600 - 320)));
 }
  
 /* Mobiles */
@@ -102,7 +104,7 @@ h3 {
 p {
     font-family: sans-serif;
     font-weight: normal;
-    font-size: 16px;
+    font-size: calc(15px + (18 - 15) * ((100vw - 320px)/(1600 - 320)));
 }
  
 /* Mobiles */
