--- a/base-3.css
+++ b/base-3.css
@@ -39,6 +39,7 @@ h1 {
        line-height: 1.3;
        margin-top: 12%;
        margin-bottom: 6%;
+       color: red;
    }
 }
 
@@ -48,6 +49,7 @@ h1 {
        line-height: 1.3;
        margin-top: 12%;
        margin-bottom: 10%;
+       color: green;
    }
 }
 
