--- a/base-5.css
+++ b/base-5.css
@@ -1,4 +1,10 @@
 /* ==== BROWSER RESETS  ==== */
+* { padding: 0; margin: 0; border: 0; font-weight: normal; font-size: 16px }
+body, html { height: 100% }	
+body { max-width: 1600px; margin: 0 auto }
+
+
+/* ==== BROWSER RESETS  ==== */
 * { padding: 0; margin: 0; border: 0; box-sizing: border-box; font-weight: normal; font-size: 16px }
 body, html { height: 100% }	
 html { scroll-behavior: smooth }
@@ -23,6 +29,7 @@ img { display: block; width: 100%; height: auto }
        padding-right: 20%
     }
 }
+
 
 /* ==== HEADINGS ==== */
 
@@ -108,6 +115,7 @@ p {
    font-weight: normal;
    font-size: calc(15px + (18 - 15) * ((100vw - 320px)/(1600 - 320)));
 }
+
 
 /* Mobiles */
 @media all and (max-width:767px) {
