--- a/smoothies/assets/css/style.css
+++ b/smoothies/assets/css/style.css
@@ -3,9 +3,8 @@
 body, html { height: 100% }
 body { max-width: 1600px; font-family: sans-serif }
 img { width: 100%; height: auto; display: block }
-html { scroll-behavior: smooth }
 
-/* =========== STYLES FOR HERO CONTAINER AT TOP OF WEB PAGE ========== */
+/* ======= STYLES FOR HERO CONTAINER AT TOP OF WEB PAGE ===== */
 
 .container-hero {
 	display: flex;
@@ -54,7 +53,7 @@ html { scroll-behavior: smooth }
 }
 
 
-/* ================================== PARENT FLEXBOX CONTAINER ============================= */
+/* ================ PARENT FLEXBOX CONTAINER ================ */
 
 .container-flexbox { 
 	display: flex;
@@ -79,8 +78,7 @@ html { scroll-behavior: smooth }
 .container-flexbox.bg-lemon      { background-color: #F1F1BC }
 
 
-
-/* ====================== FLEXBOX CHILD COLUMN: 1 COLUMN EVERY SCREEN ( .item-1 ) =================== */
+/* ======== FLEXBOX CHILD COLUMN: 1 COLUMN EVERY SCREEN ( .item-1 ) ========== */
 
 /* All screen sizes, always 100% wide */
 .container-flexbox .item-1 { 
@@ -94,7 +92,7 @@ html { scroll-behavior: smooth }
 	}
 }
 
-/* ================ FLEXBOX CHILD COLUMN: 2 COLUMNS DESKTOP, 1 COLUMN MOBILE ( .item-2 ) ============== */
+/* ======== FLEXBOX CHILD COLUMN: 2 COLUMNS DESKTOP, 1 COLUMN MOBILE ( .item-2 ) ======= */
 
 /* Desktop */
 @media all and (min-width:768px) {
@@ -117,9 +115,7 @@ html { scroll-behavior: smooth }
 	.container-flexbox.bg-blueberry  .item-2:nth-child(2) { order: 1 }
 }
 
-
-
-/* ================ HEADINGS, PARAGRAPHS AND IMAGES INSIDE COLUMNS ====================== */
+/* ========= HEADINGS, PARAGRAPHS AND IMAGES INSIDE COLUMNS ========= */
 
 /* Content inside .item-1 columns */
 .container-flexbox .item-1 p { 
@@ -166,7 +162,6 @@ html { scroll-behavior: smooth }
 	}
 }
 
-
 /* == Email sign up form container == */
 
 /* All screens */
@@ -186,7 +181,7 @@ html { scroll-behavior: smooth }
 /* Mobiles */
 @media all and (max-width:1023px) { 
 	.container-form-email-signup  { 
-		margin:  6% 8% 4% 8%;
+		margin:  6% 8% 16% 8%;
 		padding: 7% 8% 8% 8%;
 	}
 }
@@ -284,3 +279,149 @@ html { scroll-behavior: smooth }
 	#email-signup-form input { margin: 0 0 24px 0 }
 	#email-signup-form #btn-submit { margin: 30px auto 0 auto; width: 80% }
 }
+
+
+/* == Begin footer CSS == */
+
+/* Outer footer parent container */
+.container-footer { 
+    text-align: center;
+    color:#fff;
+    background-color: #d1274b;
+}
+
+/* Desktop footer - inside padding  */
+@media all and (min-width:768px) {
+	.container-footer { padding: 4% 8% 5% 8% }
+}
+
+/* Mobiles footer - inside padding */
+@media all and (max-width:767px) {
+	.container-footer { padding: 8% 8% 12% 8% }
+}
+
+/* Styles for footer background, text, icons and links */
+
+.container-footer h4,
+.container-footer h5,
+.container-footer ul li,
+.container-footer ul li a,
+.container-footer p,
+.container-footer p a {
+   color: #fff
+}
+
+/* Footer headings */
+.container-footer h4 {
+   font-family: serif;
+   font-weight: normal;
+   font-style: italic;
+   font-size: calc(26px + (48 - 26) * ((100vw - 320px)/(1600 - 320)));
+   margin: 0 auto 16px 0;
+}
+
+.container-footer h5 {
+    font-family: sans-serif;
+    font-weight: normal;
+    font-style:  italic;
+    color: #fff;
+    margin: 0 auto 36px auto;
+    font-size: calc(20px + (32 - 20) * ((100vw - 320px)/(1600 - 320)));
+}
+
+/* Footer text links and icon links */
+.container-footer ul.footer-links,
+.container-footer ul.footer-icons {
+    list-style-type: none;
+}
+
+.container-footer ul.footer-links {
+    margin: 0 auto 48px auto;
+}
+
+.container-footer ul.footer-icons {
+    margin: 0 auto 48px auto;
+}
+
+.container-footer ul.footer-links li,
+.container-footer ul.footer-icons li {
+    display: inline-block;
+    margin: 0 32px 0 0;
+}
+
+.container-footer ul.footer-links li:last-child,
+.container-footer ul.footer-icons li:last-child {
+    margin-right: 0;
+}
+
+/* Footer text links */
+.container-footer ul.footer-links li a {
+    text-decoration: none;
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+    padding-bottom:2px;    
+    font-size: calc(17px + (20 - 17) * ((100vw - 320px)/(1600 - 320)));
+}
+
+.container-footer ul.footer-links li a:link, 
+.container-footer ul.footer-links li a:visited  {
+   border-bottom-color: transparent;
+}
+
+.container-footer ul.footer-links li a:hover, 
+.container-footer ul.footer-links li a:active  {
+   border-bottom-color: #fff
+}
+
+/* Footer icons */
+.container-footer ul.footer-icons li a i {
+    text-decoration: none;
+    font-size: calc(22px + (28 - 22) * ((100vw - 320px)/(1600 - 320)));
+}
+
+.container-footer ul.footer-icons li a:hover, 
+.container-footer ul.footer-icons li a:active  {
+   color: #fff
+}
+
+/* Privacy and legal link */
+.container-footer p a {
+    text-decoration: none;
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+    padding-bottom:2px;    
+    font-size: calc(15px + (18 - 15) * ((100vw - 320px)/(1600 - 320)));
+}
+
+.container-footer p a:link, 
+.container-footer p a:visited  {
+   border-bottom-color: transparent;
+}
+
+.container-footer p a:hover, 
+.container-footer p a:active  {
+   border-bottom-color: #fff
+}
+
+a.privacy-legal {
+    font-family: sans-serif;    
+    display: inline-block;
+    color:#fff;
+    text-decoration: none;
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+    padding-bottom:2px;    
+    font-size: calc(14px + (17 - 14) * ((100vw - 320px)/(1600 - 320)));
+}
+
+a.privacy-legal:link,
+a.privacy-legal:visited {
+    border-bottom-color: transparent;
+}
+
+a.privacy-legal:active,
+a.privacy-legal:hover {
+    border-bottom-color: #fff
+}
+
+/* == End footer CSS == */
