--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -84,7 +84,7 @@ p, li { color: #000000; font-family:'Open Sans', serif }
 /* on mobiles, prevent scrolling outside flyout menu */
 .no-scroll { overflow: hidden }
 
-.menu-drop-shadow { box-shadow: 0 1px 10px #888 }
+.menu-drop-shadow { box-shadow: 0 1px 10px #222 }
 
 /* ======= DESKTOP MENU ======= */
 
@@ -259,26 +259,26 @@ p, li { color: #000000; font-family:'Open Sans', serif }
 
 /* drop shadow border at left of fly-out menu */
 .flyout-menu.flyout-menu-is-open {
-    box-shadow: 0px 1px 10px #888 
+    box-shadow: 0px 1px 10px #222
 }
 
 /* menu links */
-.menu-light ul li a:link,  .menu-light ul li a:visited { color:#0f2456 }
-.menu-light ul li a:hover, .menu-light ul li a:active  { color: #222 }
+.menu-light ul li a:link,  .menu-light ul li a:visited { color:#222 }
+.menu-light ul li a:hover, .menu-light ul li a:active  { color: #33adff}
 
 /* cta button */
 .menu-light ul li a.btn-cta:link, 
 .menu-light ul li a.btn-cta:visited {
     background-color: transparent;
-    color: #0f2456;
+    color: #222;
     border-color:#0f2456
 }
 
 .menu-light ul li a.btn-cta:hover,
 .menu-light ul li a.btn-cta:active {
-    background-color: #0f2456;
-    color: #fff;
-    border-color:#0f2456
+    background-color: none;
+    color: #33adff;
+    border-color:#33adff
 }
 
 /* on mobiles only */
@@ -326,22 +326,22 @@ a[href^=tel] { text-decoration: none; color:#0f2456 }
 }
 
 /* menu links */
-.menu-transparent ul li a:link,  .menu-transparent ul li a:visited { color: #fff }
-.menu-transparent ul li a:hover, .menu-transparent ul li a:active  { color: #b8b8b8 }
+.menu-transparent ul li a:link,  .menu-transparent ul li a:visited { color: #fff}
+.menu-transparent ul li a:hover, .menu-transparent ul li a:active  { color: #33adff}
 
 /* cta button */
 .menu-transparent ul li a.btn-cta:link,
 .menu-transparent ul li a.btn-cta:visited { 
-    background-color: #0f2456;
+    background-color: #fff
     color: #fff;
-    border-color:#0f2456;
+    border-color:none;
 }
 
 .menu-transparent ul li a.btn-cta:hover,
 .menu-transparent ul li a.btn-cta:active { 
-    background-color: #fff;
-    color: #0f2456;
-    border-color:#0f2456
+    background-color:none;
+    color: #fff;
+    border-color:#33adff
 }
 
 /* on mobiles only - various content */
@@ -440,7 +440,6 @@ a[href^=tel] { text-decoration: none; color: #fff }
 	.container-hero-block h1 { margin-top: 18%; margin-bottom: 5% }
 }
 
-
 /* ==== CONTAINER FOR SINGLE COLUMN OF CONTENT ==== */
 
 /* Desktop */
@@ -525,7 +524,7 @@ a.fancy-link:hover, a.fancy-link:active {
 
 a.fancy-link:link, a.fancy-link:visited { color:#000000; border-bottom-color:#000000 }
 
-a.fancy-link:hover, a.fancy-link:active { color: #888; border-bottom-color: #888 }
+a.fancy-link:hover, a.fancy-link:active { color: #33adff; border-bottom-color:#33adff }
 
 
 /* ============== FLEXBOX MULTI-COLUMN LAYOUTS ================== */
@@ -658,7 +657,6 @@ img.image-circle {
     margin-top: 12px
 }
 
-
 /* =============== BEGIN CONTACT FORM CSS ============= */
 
 /* == Contact form container == */
@@ -784,8 +782,6 @@ img.image-circle {
 	margin-left: 9px;
 	font-size: 104%
 }
-
-
 
 /* =============== BEGIN FOOTER CSS ================== */
 
