--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -282,37 +282,37 @@ p, li { color: #000000; font-family:'Open Sans', serif }
 }
 
 /* on mobiles only */
-.menu-light.flyout-menu hr { background-color: #0f2456; border-color:#0f2456 } 
+.menu-light.flyout-menu hr { background-color: #fff; border-color:transparent } 
 
 .menu-light.flyout-menu h4,
 .menu-light.flyout-menu h5,
 .menu-light.flyout-menu h5 a, 
-.menu-light.flyout-menu p { color:#0f2456 } 
+.menu-light.flyout-menu p { color:#000000 } 
 
 /* colour of hamburger icon bars */
 .menu-light .item-icon .bar1, 
 .menu-light .item-icon .bar2, 
-.menu-light .item-icon .bar3 { background-color:#0f2456 }	
+.menu-light .item-icon .bar3 { background-color:#fff }	
 
 /* phone number link */
-a[href^=tel] { text-decoration: none; color:#0f2456 }
+a[href^=tel] { text-decoration: none; color:#fff}
 
 /* email link */
 .menu-light.flyout-menu h5 a:link, 
 .menu-light.flyout-menu h5 a:visited {
-    border-bottom-color: #0f2456;
+    border-bottom-color: #000000;
 }
 
 .menu-light.flyout-menu h5 a:hover, 
 .menu-light.flyout-menu h5 a:active {
-    border-bottom-color: #fff;
+    border-bottom-color: #33adff;
 }
 
 /* profile image border colour */
-.menu-light.flyout-menu.flyout-menu-is-open div.fly-out-profile-box img { border-color:#0f2456 }
+.menu-light.flyout-menu.flyout-menu-is-open div.fly-out-profile-box img { border-color:#000000 }
 
 /* contact icons */
-.menu-light.flyout-menu .fly-out-social-icons a i { color: #0f2456 }
+.menu-light.flyout-menu .fly-out-social-icons a i { color: #33adff}
 
 /* === End light background menu === */
 
