--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -664,7 +664,7 @@ img.image-circle {
 /* All screens */
 .container-contact-form { 
 	text-align: center; 
-	background-color: #4799eb; 
+	background-color: #fff; 
 }
 
 /* Desktop */
@@ -688,7 +688,7 @@ img.image-circle {
 /* Heading */
 .container-contact-form h3 { 
 	font-weight: bold; 
-	color: #0c2461;
+	color: #000000;
 	line-height: 1.2;
 	margin-bottom: 3%;
 	font-size: calc(30px + (64 - 30) * ((100vw - 320px) / (1600 - 320))); 
@@ -697,7 +697,7 @@ img.image-circle {
 /* Text */
 .container-contact-form p { 
     font-weight: normal;
-    color: #000; 
+    color: #000000; 
 	line-height: 1.5;
 	margin-bottom: 7%;
 	font-size: calc(16px + (22 - 16) * ((100vw - 320px) / (1600 - 320))); 
@@ -723,7 +723,7 @@ img.image-circle {
 
 #contact-form label, #contact-form input, #contact-form textarea {
 	font-family: sans-serif;
-	color: #000;
+	color: #000000;
 	display: block;
 }
 
@@ -749,7 +749,7 @@ img.image-circle {
 
 #contact-form input, #contact-form textarea {
 	padding: 10px 12px;
-	border: 2px solid #0c2461;
+	border: 2px solid #000000;
 	background-color: #f0f0f0;
 	border-radius: 5px;
 }
@@ -763,8 +763,8 @@ img.image-circle {
 
 #contact-form #btn-submit { 
 	float: right; 
-	border: none; 
-    background-color: #0c2461;
+	border: solid; 
+    background-color: #000000;
     color: #fff;
 	font-weight: bold;
     padding: 18px 28px;
@@ -774,8 +774,8 @@ img.image-circle {
 
 #contact-form #btn-submit:hover, 
 #contact-form #btn-submit:active { 
-    background-color: #403d50;
-    color: #fff
+    background-color: #fff;
+    color: #000000
 }
 
 #contact-form #btn-submit i.fas {
