--- a/portfolio/travel/assets/css/style.css
+++ b/portfolio/travel/assets/css/style.css
@@ -928,7 +928,7 @@ a[href^=tel] { text-decoration: none; color: #fff }
 
 .container-footer ul.footer-links li a:hover, 
 .container-footer ul.footer-links li a:active  {
-   border-bottom-color: #fff
+   border-bottom-color: #33adff;
 }
 
 /* Footer icons */
@@ -939,7 +939,7 @@ a[href^=tel] { text-decoration: none; color: #fff }
 
 .container-footer ul.footer-icons li a:hover, 
 .container-footer ul.footer-icons li a:active  {
-   color: #fff
+   color: #33adff;
 }
 
 /* Privacy and legal link */
@@ -958,7 +958,7 @@ a[href^=tel] { text-decoration: none; color: #fff }
 
 .container-footer p a:hover, 
 .container-footer p a:active  {
-   border-bottom-color: #fff
+   border-bottom-color: #33adff;
 }
 
 a.privacy-legal {
@@ -979,7 +979,7 @@ a.privacy-legal:visited {
 
 a.privacy-legal:active,
 a.privacy-legal:hover {
-    border-bottom-color: #fff
+    border-bottom-color: #33adff;
 }
 
 /* == End footer CSS == */
