--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -326,7 +326,7 @@ a[href^=tel] { text-decoration: none; color:#fff}
 }
 
 /* menu links */
-.menu-transparent ul li a:link,  .menu-transparent ul li a:visited { color: #000000}
+.menu-transparent ul li a:link,  .menu-transparent ul li a:visited { color: #fff}
 .menu-transparent ul li a:hover, .menu-transparent ul li a:active  { color: #33adff}
 
 /* Privacy menu links */
